@@ -32,7 +32,7 @@ namespace events {
 //
 
 messageCountEvent::messageCountEvent
-	(class folder* folder, const Types type, const std::vector <int>& nums)
+	(folder* folder, const Types type, const std::vector <int>& nums)
 		: m_folder(folder), m_type(type)
 {
 	m_nums.resize(nums.size());
@@ -40,9 +40,9 @@ messageCountEvent::messageCountEvent
 }
 
 
-const folder* messageCountEvent::folder() const { return (const_cast <class folder*>(m_folder)); }
-const messageCountEvent::Types messageCountEvent::type() const { return (m_type); }
-const std::vector <int>& messageCountEvent::numbers() const { return (m_nums); }
+const folder* messageCountEvent::getFolder() const { return (const_cast <folder*>(m_folder)); }
+const messageCountEvent::Types messageCountEvent::getType() const { return (m_type); }
+const std::vector <int>& messageCountEvent::getNumbers() const { return (m_nums); }
 
 
 void messageCountEvent::dispatch(messageCountListener* listener) const
@@ -59,7 +59,7 @@ void messageCountEvent::dispatch(messageCountListener* listener) const
 //
 
 messageChangedEvent::messageChangedEvent
-	(class folder* folder, const Types type, const std::vector <int>& nums)
+	(folder* folder, const Types type, const std::vector <int>& nums)
 		: m_folder(folder), m_type(type)
 {
 	m_nums.resize(nums.size());
@@ -67,9 +67,9 @@ messageChangedEvent::messageChangedEvent
 }
 
 
-const folder* messageChangedEvent::folder() const { return (const_cast <class folder*>(m_folder)); }
-const messageChangedEvent::Types messageChangedEvent::type() const { return (m_type); }
-const std::vector <int>& messageChangedEvent::numbers() const { return (m_nums); }
+const folder* messageChangedEvent::getFolder() const { return (const_cast <folder*>(m_folder)); }
+const messageChangedEvent::Types messageChangedEvent::getType() const { return (m_type); }
+const std::vector <int>& messageChangedEvent::getNumbers() const { return (m_nums); }
 
 
 void messageChangedEvent::dispatch(messageChangedListener* listener) const
@@ -83,18 +83,18 @@ void messageChangedEvent::dispatch(messageChangedListener* listener) const
 //
 
 folderEvent::folderEvent
-	(class folder* folder, const Types type,
+	(folder* folder, const Types type,
 	 const utility::path& oldPath, const utility::path& newPath)
 	: m_folder(folder), m_type(type), m_oldPath(oldPath), m_newPath(newPath)
 {
 }
 
 
-const class folder* folderEvent::folder() const { return (m_folder); }
-const folderEvent::Types folderEvent::type() const { return (m_type); }
+const folder* folderEvent::getFolder() const { return (m_folder); }
+const folderEvent::Types folderEvent::getType() const { return (m_type); }
 
 
-void folderEvent::dispatch(class folderListener* listener) const
+void folderEvent::dispatch(folderListener* listener) const
 {
 	switch (m_type)
 	{
